add_executable(two_sum 001_two_sum.c)
add_executable(reverse_integer 007_reverse_integer.c)
add_executable(palindrome_number 009_palindrome_number.c)
add_executable(roman_to_integer 013_roman_to_integer.c)
add_executable(longest_common_prefix.c 014_longest_common_prefix.c)
add_executable(valid_parentheses 020_valid_parentheses.c)
add_executable(merge_two_sorted_lists 021_merge_two_sorted_lists.c)
add_executable(remove_duplicates_from_sorted_array 026_remove_duplicates_from_sorted_array.c)
add_executable(remove_element 027_remove_element.c)
add_executable(kmp kmp.c)